# semgrep-search

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  flake.nix  pyproject.toml
.github/workflows/: release.yml  ruff.yml
semgrep_search/: __init__.py  __main__.py  const.py  database.py  inspection.py  main.py  run.py  runconfig.py  search.py  semgrep.py  utils.py
sgs/: __init__.py  const.py  database.py  inspection.py  main.py  search.py  utils.py
