[project]
name = "semgrep-search"
version = "1.1.3"
description = "A tool to generate a custom Semgrep ruleset from multiple sources"
authors = [{ name = "Malte Heinzelmann", email = "malte@cybaer.ninja" }]
requires-python = ">=3.8"
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
    "requests>=2.32.3,<3",
    "PyYAML>=6.0.2,<7",
    "oras>=0.2.25,<0.3",
    "tinydb>=4.8.2,<5",
    "ruamel-yaml>=0.18.10,<0.19",
    "babel>=2.17.0,<3",
    "rich>=13.9.4,<14",
    "semver>=3.0.4,<4",
    "tomli>=2.2.1,<3",
    "base58>=2.1.1,<3",
    "asyncio>=3.4.3,<4",
]

[project.urls]
Homepage = "https://github.com/hnzlmnn/semgrep-search"

[project.scripts]
sgs = "semgrep_search:main"
semgrep-search = "semgrep_search:main"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["semgrep_search"]

[tool.hatch.build.targets.wheel]
include = ["semgrep_search"]

[tool.ruff]

include = ["sgs/**/*.py"]
target-version = "py38"

# Allow lines to be as long as 120 characters.
line-length = 120

# Group violations by containing file.
output-format = "full"

[tool.ruff.lint]

# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F", "N", "W", "Q", "SLF", "SIM", "T20", "ERA", "TD", "COM",
    "YTT", "ANN", "S", "BLE", "FBT", "B", "COM", "C4", "DTZ", "T10", "FA",
    "ISC", "ICN", "INP", "PIE", "T20", "PYI",  "PT", "Q", "RSE", "RET",
    "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX"]
ignore = ["BLE001", "ANN101", "ERA001"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Make sure autofix doesn't delete imports from __init__.py
ignore-init-module-imports = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "single"
